[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.135.1"}
uvicorn = "^0.33.0"
slack-bolt = "^1.23.0"
slack-sdk = {extras = ["socket-mode"], version = "^3.35.0"}
python-dotenv = "^1.2.2"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
openai = "^2.24.0"
notion-client = "^2.0.0"
loguru = "^0.7.0"
tiktoken = { version = "^0.9.0", extras = ["openai"] }
tenacity = "^8.2.0"  # For retries
cachetools = "^5.3.0"  # For caching
nltk = "^3.9.3"
httpcore = "^1.0.9"
# Add to [tool.poetry.dependencies]:
beautifulsoup4 = "^4.14.3"
# Security fixes for transitive dependencies
python-multipart = "^0.0.22"
urllib3 = "^2.6.3"
starlette = "^0.49.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
